--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@directus/eslint-config",
 	"type": "module",
 	"version": "0.0.0",
-	"packageManager": "pnpm@9.14.4",
+	"packageManager": "pnpm@9.15.5",
 	"description": "Shared ESLint config used in Directus projects",
 	"author": {
 		"name": "Monospace Inc",
@@ -24,7 +24,7 @@
 		"dist"
 	],
 	"engines": {
-		"node": "18 || 20",
+		"node": ">=22",
 		"pnpm": "9"
 	},
 	"maintainers": [
@@ -35,26 +35,38 @@
 		}
 	],
 	"scripts": {
-		"build": "pnpm run '/^(bundle|typecheck)$/'",
+		"build": "pnpm run typegen && pnpm run '/^(bundle|typecheck)$/'",
+		"typegen": "tsx scripts/typegen.ts",
 		"bundle": "tsup src/index.ts --format=esm --dts --minify",
 		"typecheck": "tsc --noEmit",
+		"dev": "tsup src/index.ts --format=esm --watch",
 		"lint": "eslint .",
+		"test": "vitest --watch=false",
 		"inspect": "pnpm dlx @eslint/config-inspector --config eslint.config.ts"
 	},
 	"peerDependencies": {
 		"eslint": "^9.10"
 	},
 	"dependencies": {
-		"@antfu/eslint-config": "3.11.2",
-		"eslint-flat-config-utils": "0.4.0",
-		"eslint-plugin-format": "0.1.3",
-		"prettier": "3.4.1"
+		"@dprint/formatter": "0.4.1",
+		"@eslint/js": "9.18.0",
+		"eslint-flat-config-utils": "2.0.1",
+		"eslint-plugin-format": "1.0.1",
+		"eslint-plugin-vue": "9.32.0",
+		"local-pkg": "1.0.0",
+		"prettier": "3.4.2",
+		"synckit": "0.9.2",
+		"typescript-eslint": "8.19.1"
 	},
 	"devDependencies": {
-		"@directus/tsconfig": "2.0.0",
-		"eslint": "9.16.0",
-		"jiti": "2.4.1",
+		"@directus/tsconfig": "3.0.0",
+		"@types/node": "22.10.5",
+		"eslint": "9.18.0",
+		"eslint-typegen": "1.0.0",
+		"jiti": "2.4.2",
 		"tsup": "8.3.5",
-		"typescript": "5.7.2"
+		"tsx": "4.19.2",
+		"typescript": "5.7.3",
+		"vitest": "3.0.5"
 	}
 }
