--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@directus/eslint-config",
 	"type": "module",
 	"version": "0.0.0",
-	"packageManager": "pnpm@9.15.5",
+	"packageManager": "pnpm@10.3.0",
 	"description": "Shared ESLint config used in Directus projects",
 	"author": {
 		"name": "Monospace Inc",
@@ -25,7 +25,7 @@
 	],
 	"engines": {
 		"node": ">=22",
-		"pnpm": "9"
+		"pnpm": "10"
 	},
 	"maintainers": [
 		{
@@ -35,11 +35,9 @@
 		}
 	],
 	"scripts": {
-		"build": "pnpm run typegen && pnpm run '/^(bundle|typecheck)$/'",
-		"typegen": "tsx scripts/typegen.ts",
-		"bundle": "tsup src/index.ts --format=esm --dts --minify",
+		"build": "pnpm run '/^(bundle|typecheck)$/'",
+		"bundle": "tsup src/index.ts --format=esm --minify --dts",
 		"typecheck": "tsc --noEmit",
-		"dev": "tsup src/index.ts --format=esm --watch",
 		"lint": "eslint .",
 		"test": "vitest --watch=false",
 		"inspect": "pnpm dlx @eslint/config-inspector --config eslint.config.ts"
@@ -48,25 +46,62 @@
 		"eslint": "^9.10"
 	},
 	"dependencies": {
+		"@directus/eslint-plugin-dprint": "workspace:*",
 		"@dprint/formatter": "0.4.1",
-		"@eslint/js": "9.18.0",
+		"@eslint-community/eslint-plugin-eslint-comments": "4.4.1",
+		"@eslint/js": "9.20.0",
+		"@eslint/markdown": "6.2.2",
+		"@stylistic/eslint-plugin": "3.1.0",
+		"@typescript-eslint/eslint-plugin": "8.24.0",
+		"@typescript-eslint/parser": "8.24.0",
+		"@vitest/eslint-plugin": "1.1.31",
+		"eslint-config-flat-gitignore": "2.0.0",
 		"eslint-flat-config-utils": "2.0.1",
+		"eslint-formatting-reporter": "0.0.0",
+		"eslint-merge-processors": "2.0.0",
+		"eslint-parser-plain": "0.1.1",
+		"eslint-plugin-antfu": "3.0.0",
+		"eslint-plugin-command": "3.0.0",
 		"eslint-plugin-format": "1.0.1",
+		"eslint-plugin-jsdoc": "50.6.3",
+		"eslint-plugin-jsonc": "2.19.1",
+		"eslint-plugin-n": "17.15.1",
+		"eslint-plugin-no-only-tests": "3.3.0",
+		"eslint-plugin-perfectionist": "4.8.0",
+		"eslint-plugin-regexp": "2.7.0",
+		"eslint-plugin-toml": "0.12.0",
+		"eslint-plugin-unicorn": "56.0.1",
+		"eslint-plugin-unused-imports": "4.1.4",
 		"eslint-plugin-vue": "9.32.0",
+		"eslint-plugin-yml": "1.16.0",
+		"eslint-processor-vue-blocks": "2.0.0",
+		"globals": "15.15.0",
+		"jsonc-eslint-parser": "2.4.0",
 		"local-pkg": "1.0.0",
-		"prettier": "3.4.2",
-		"synckit": "0.9.2",
-		"typescript-eslint": "8.19.1"
+		"toml-eslint-parser": "0.10.0",
+		"typescript-eslint": "8.24.0",
+		"vue-eslint-parser": "9.4.3",
+		"yaml-eslint-parser": "1.2.3"
 	},
 	"devDependencies": {
+		"@antfu/eslint-config": "4.2.0",
 		"@directus/tsconfig": "3.0.0",
-		"@types/node": "22.10.5",
-		"eslint": "9.18.0",
-		"eslint-typegen": "1.0.0",
+		"@espcom/esbuild-plugin-replace": "1.1.0",
+		"@types/node": "22.13.2",
+		"eslint": "9.20.1",
+		"eslint-define-config": "2.1.0",
+		"eslint-plugin-import-x": "4.6.1",
 		"jiti": "2.4.2",
-		"tsup": "8.3.5",
-		"tsx": "4.19.2",
+		"tsup": "8.3.6",
 		"typescript": "5.7.3",
 		"vitest": "3.0.5"
+	},
+	"pnpm": {
+		"patchedDependencies": {
+			"synckit@0.9.2": "patches/synckit@0.9.2.patch"
+		},
+		"onlyBuiltDependencies": [
+			"esbuild"
+		]
 	}
 }
