--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
 
 	// Silent the stylistic rules in you IDE, but still auto fix them
 	"eslint.rules.customizations": [
-		{ "rule": "stylistic/*", "severity": "off", "fixable": true },
+		{ "rule": "@stylistic/*", "severity": "off", "fixable": true },
 		{ "rule": "dprint/*", "severity": "off", "fixable": true },
 		{ "rule": "*-spacing", "severity": "off", "fixable": true },
 		{ "rule": "*-spaces", "severity": "off", "fixable": true },
@@ -19,8 +19,7 @@
 		{ "rule": "*-dangle", "severity": "off", "fixable": true },
 		{ "rule": "*-newline", "severity": "off", "fixable": true },
 		{ "rule": "*indent", "severity": "off", "fixable": true },
-		{ "rule": "*quotes", "severity": "off", "fixable": true },
-		{ "rule": "*semi", "severity": "off", "fixable": true }
+		{ "rule": "*quotes", "severity": "off", "fixable": true }
 	],
 
 	// Enable eslint for all supported languages
