--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
 	"extends": "@directus/tsconfig/node22",
-	"include": ["**/*.ts"]
+	"compilerOptions": {
+		"module": "NodeNext",
+		"resolveJsonModule": true
+	},
+	"include": ["src"]
 }
