--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -35,3 +35,16 @@ jobs:
 
       - name: Run typecheck
         run: pnpm run typecheck
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup env
+        uses: ./.github/actions/setup
+
+      - name: Run tests
+        run: pnpm test
