--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
 		"source.organizeImports": "never"
 	},
 
-	// Silent the stylistic rules in you IDE, but still auto fix them
+	// Silence the stylistic rules in your IDE, but still auto fix them
 	"eslint.rules.customizations": [
 		{ "rule": "@stylistic/*", "severity": "off", "fixable": true },
 		{ "rule": "dprint/*", "severity": "off", "fixable": true },
