--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"fetch-dprint-plugins": "node scripts/fetch-dprint-plugins.js",
 		"lint": "eslint .",
 		"test": "vitest --watch=false",
-		"inspect": "pnpm dlx @eslint/config-inspector --config eslint.config.ts"
+		"inspect": "pnpm exec eslint-config-inspector"
 	},
 	"peerDependencies": {
 		"eslint": "^9.20"
@@ -83,6 +83,7 @@
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "3.0.0",
+		"@eslint/config-inspector": "1.0.0",
 		"@types/node": "22.13.5",
 		"eslint": "9.21.0",
 		"execa": "9.5.2",
