chore: drop engine-strict for now

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,5 @@
-engine-strict=true
+# disabled due to https://github.com/dependabot/dependabot-core/issues/12535
+engine-strict=false
+
 shell-emulator=true
 save-prefix=''
